update: fixed layout shift scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,8 @@
 body {
     background-color: #F5F5F5;
 }
+
+
+html {
+    overflow-y: scroll;
+}
